Icons, Blog, Some CSS, Blogjs logicjs updates

--- a/Develop/blog.html
+++ b/Develop/blog.html
@@ -16,9 +16,22 @@
   <body>
     <!-- TODO: Create header, main, and footer elements -->
     <header>
-      <nav>Hi</nav>
+      <nav>
+        <h1>My Blog Posts</h1>
+        <div>
+          <p id="back">BACK</p>
+
+          <object
+            id="toggle"
+            type="image/svg+xml"
+            data="./assets/icons/sun-icon.svg"
+            width="24"
+            height="24"
+          ></object>
+        </div>
+      </nav>
     </header>
-    <main>Hi</main>
+    <main></main>
     <footer></footer>
   </body>
 </html>
