--- a/Develop/blog.html
+++ b/Develop/blog.html
@@ -24,7 +24,7 @@
           <object
             id="toggle"
             type="image/svg+xml"
-            data="./assets/icons/sun-icon.svg"
+            data="./assets/icons/moon-icon.svg"
             width="24"
             height="24"
           ></object>
@@ -32,6 +32,8 @@
       </nav>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+      <div>Made by Greg Barker - 2024</div>
+    </footer>
   </body>
 </html>
