Toggle function event listener - still needs CSS swtich - fnc is tested

--- a/Develop/blog.html
+++ b/Develop/blog.html
@@ -21,13 +21,13 @@
         <div>
           <p id="back">BACK</p>
 
-          <object
+          <img
             id="toggle"
-            type="image/svg+xml"
-            data="./assets/icons/moon-icon.svg"
+            alt="sun-image"
+            src="./assets/icons/moon-icon.svg"
             width="24"
             height="24"
-          ></object>
+          />
         </div>
       </nav>
     </header>
