--- a/Develop/index.html
+++ b/Develop/index.html
@@ -14,7 +14,22 @@
   </head>
   <body>
     <!-- TODO: Create landing page elements to match the mock-up provided. At the very least, include the following elements. -->
-    <header></header>
+    <header>
+      <nav>
+        <h1>My Blog Posts</h1>
+        <div>
+          
+
+          <img
+            id="toggle"
+            alt="sun-image"
+            src="./assets/icons/sun-icon.svg"
+            width="24"
+            height="24"
+          />
+        </div>
+      </nav>
+    </header>
     <main>
       <aside>
         <h2>My First Blog</h2>
@@ -60,6 +75,8 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div>Made by Greg Barker - 2024</div>
+    </footer>
   </body>
 </html>
