--- a/Develop/blog.html
+++ b/Develop/blog.html
@@ -13,7 +13,7 @@
     <script defer src="./assets/js/blog.js" type="text/javascript"></script>
   </head>
 
-  <body>
+  <body class="light">
     <!-- TODO: Create header, main, and footer elements -->
     <header>
       <nav>
