--- a/Develop/index.html
+++ b/Develop/index.html
@@ -12,14 +12,12 @@
     <script defer src="./assets/js/logic.js" type="text/javascript"></script>
     <script defer src="./assets/js/form.js" type="text/javascript"></script>
   </head>
-  <body>
+  <body class="light">
     <!-- TODO: Create landing page elements to match the mock-up provided. At the very least, include the following elements. -->
     <header>
       <nav>
         <h1>My Blog Posts</h1>
         <div>
-          
-
           <img
             id="toggle"
             alt="sun-image"
