Theme toggle fixed for test

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -12,7 +12,7 @@
     <script defer src="./assets/js/logic.js" type="text/javascript"></script>
     <script defer src="./assets/js/form.js" type="text/javascript"></script>
   </head>
-  <body class="light">
+  <body id="theme-change" class="light">
     <!-- TODO: Create landing page elements to match the mock-up provided. At the very least, include the following elements. -->
     <header>
       <nav>
