Trying things for testing"

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,7 +35,7 @@
       <!-- A form element that contains the following: -->
       <section>
         <h2>What's on your mind?</h2>
-        <form action="/submit-post" method="POST">
+        <form action="blog.html" method="POST" id="form">
           <!-- An input element whose label and id are `username` -->
 
           <label for="username">Username:</label>
@@ -66,7 +66,7 @@
             placeholder="Write your message ..."
           ></textarea>
 
-          <input type="submit" id="submit" value="SUBMIT" />
+          <input type="submit" id="submit" value="submit" />
           <!-- A p element whose id is `error` -->
           <p id="error"></p>
         </form>
