--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,7 +35,7 @@
       <!-- A form element that contains the following: -->
       <section>
         <h2>What's on your mind?</h2>
-        <form action="blog.html" method="POST" id="form">
+        <form action="" method="POST" id="form">
           <!-- An input element whose label and id are `username` -->
 
           <label for="username">Username:</label>
